--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -1,30 +1,15 @@
 [user]
 	email = juliette.lamarche.xyz@gmail.com
 	name = Juliette Lamarche
-  signingkey = 03385F0C896240A240C49F8CF1D6B54A3C0D429B # New key
-  # signingkey = DB6F754B59A68BC3AE6CF695004A3B1CB2774189 # Old key
+  signingkey = 03385F0C896240A240C49F8CF1D6B54A3C0D429B
 [commit]
   gpgsign = true
 [tag]
   gpgsign = true
-[diff]
-	tool = delta
-	algorithm = histogram
-[pager]
-  diff = delta
-  log = delta
-  reflog = delta
-  show = delta
-[difftool "delta"]
-  cmd = delta
 [init]
 	defaultBranch = main
 [core]
 	editor = nvim -u ~/.config/nvim/prompter.vim --noplugin
-[merge]
-  tool = nvim
-[mergetool "nvim"]
-	cmd = nvim -s -d $LOCAL $BASE $REMOTE $MERGED -c 'wincmd J | wincmd ='
 [pull]
 	rebase = true
 [diff "jupyternotebook"]
