--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -5,7 +5,7 @@
     "clock",
     "sway/mode",
     "river/mode",
-		"sway/workspaces",
+    "sway/workspaces",
   ],
   "modules-center": [
     "sway/window",
@@ -23,10 +23,12 @@
   },
   "river/tags": {},
   "sway/window": {
+    "swap-icon-label": false,
     "max-length": 90,
     "tooltip": false
   },
   "river/window": {
+    "swap-icon-label": false,
     "max-length": 90,
     "tooltip": false
   },
