--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -130,6 +130,8 @@ mode audio {
   bindsym return mode default
 }
 bindsym $mod+o mode audio
+exec pactl set-sink-volume @DEFAULT_SINK@ 30%
+exec pactl set-sink-mute @DEFAULT_SINK@ 0
 
 
 bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
@@ -168,7 +170,7 @@ for_window [app_id=^firefox$] inhibit_idle fullscreen
 for_window [app_id=^celluloid$] inhibit_idle fullscreen
 for_window [title="^scratchpad$"] move scratchpad
 
-exec dbus-update-activation-environment --all
+exec dbus-update-activation-environment XDG_CURRENT_DESKTOP=sway WAYLAND_DISPLAY
 exec gpg-connect-agent /bye
 
 exec firefox
@@ -178,10 +180,7 @@ exec kdeconnectd
 exec mako
 exec syncthing serve --no-browser --no-restart --logflags=0
 exec pipewire
-exec pactl set-sink-volume @DEFAULT_SINK@ 30%
-exec pactl set-sink-mute @DEFAULT_SINK@ 0
 exec /usr/bin/gnome-keyring-daemon --start
-
 exec waybar
 include ./ghostty
 include /etc/sway/config.d/*
